test/mutation_analysis/s0496_next_greater_element_i/hafis/ablation_o3_full/mutants/17/result.txt
./test/mutation_analysis/s0496_next_greater_element_i/hafis/ablation_o3_full/mutants/17/Solution.java:29: error: unreachable statement
                while (false) {
                              ^
1 error
